--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -7,25 +7,15 @@
   <div>
     <img src="assets/imgs/field.jpg" />
   </div>
-  <ion-item-divider><h2>My Books</h2></ion-item-divider>
+  <ion-item-divider>
+    <h2>My Books</h2>
+  </ion-item-divider>
   <ion-content style="width:100%;height:100%;">
     <ion-scroll scrollX="true" padding style="width:100vw; height:200px">
       <ion-row nowrap>
-        <div col-md-3 (click)="openBook();">
+        <div col-md-3 *ngFor="let book of books" (tap)="show(book)">
           <img src="assets/imgs/books.png" />
-          <p>hey</p>
-        </div>
-        <div col-md-3 (click)="openBook()">
-          <img src="assets/imgs/books.png" />
-          <p>hey</p>
-        </div>
-        <div col-md-3 (click)="openBook()">
-          <img src="assets/imgs/books.png" />
-          <p>hey</p>
-        </div>
-        <div col-md-3 (click)="openBook()">
-          <img src="assets/imgs/books.png" />
-          <p>hey</p>
+          <p>{{book.label}}</p>
         </div>
       </ion-row>
     </ion-scroll>
